[package]
name = "async_io_packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
snow = "0.9.0"

[dev-dependencies]
async-io-packet-test-utils = { path = "test-utils" }
